work onmain section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,54 @@
 
         </div>
     </header>
+    <!--main section-->
+    <main class="main">
+        <div class="main-section">
+            <!--main content-->
+            <div>
+                <img src="./image/one.PNG" alt="">
+            </div>
+            <div class="main-text">
+                <p class="main-text__para">
+                    STEP 1 OF 3</p>
+                <h1 class="main-text__title"> Finish setting up your<br> account</h1>
+                <p class="main-text__text">
+                    Netflix is personalized for you.<br> Create a password to watch on any <br>device at any time.
+                </p>
+                <!--button-->
+                <div class="button">
+                    <button class="button__btn"><a href="#" class="button__link">Next</a></button>
+                </div>
+            </div>
+            <!-- end main content-->
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer-main">
+            <!--footer-->
+            <div>
+                <a href="#"> Questions? Contact us.
+                </a><br>
+                <a href="#">FAQ</a><br>
+                <a href="#"> Privacy</a><br>
+            </div>
+            <div>
+                <a href="#"> Help Center</a><br>
+                <a href="#"> Cookie Preferences</a><br>
+
+            </div>
+            <div>
+                <a href="#"> Netflix Shop</a><br>
+                <a href="#"> Corporate Information</a>
+
+            </div>
+            <div>
+                <a href="#">Terms of Use </a>
+
+            </div>
+            <!--end footer-->
+        </div>
+    </footer>
 
 
 </body>
