work on footer section

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
     <footer class="footer">
         <div class="footer-main">
             <!--footer-->
-            <div>
-                <a href="#"> Questions? Contact us.
+            <div class="footer-main__links">
+                <a href="#" class="footer-main__link"> Questions? Contact us.
                 </a><br>
-                <a href="#">FAQ</a><br>
-                <a href="#"> Privacy</a><br>
+                <a href="#" class="footer-main__link">FAQ</a><br>
+                <a href="#" class="footer-main__link"> Privacy</a><br>
             </div>
-            <div>
-                <a href="#"> Help Center</a><br>
-                <a href="#"> Cookie Preferences</a><br>
+            <div class="footer-main__links">
+                <a href="#" class="footer-main__link"> Help Center</a><br>
+                <a href="#" class="footer-main__link"> Cookie Preferences</a><br>
             </div>
-            <div>
-                <a href="#"> Netflix Shop</a><br>
-                <a href="#"> Corporate Information</a>
+            <div class="footer-main__links">
+                <a href="#" class="footer-main__link"> Netflix Shop</a><br>
+                <a href="#" class="footer-main__link"> Corporate Information</a>
             </div>
-            <div>
-                <a href="#">Terms of Use </a>
+            <div class="footer-main__links">
+                <a href="#" class="footer-main__link">Terms of Use </a>
             </div>
             <!--end footer-->
         </div>
